navbar scss alert

--- a/frontend/src/sass/abstracts/_variables.scss
+++ b/frontend/src/sass/abstracts/_variables.scss
@@ -1,8 +1,8 @@
 // Colors
-$color-primary: #328da8;
+$color-primary: #000000;
 $color-secondary: #47acad;
-$color-tertiary: #2fa18a;
-$color-quaternary: #87369e;
+$color-tertiary: #ff0095;
+$color-quaternary: #8025d4;
 
 $color-grey-light: #efefef;
 $color-grey-dark: #333;
