--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -2,8 +2,12 @@
 @import 'abstracts/variables';
 @import 'base/base';
 @import 'base/utilitis';
-@import 'components/notfound';
 @import 'layout/grid';
+
+@import 'components/notfound';
+@import 'components/navbar';
+@import 'components/alert';
+
 
 @import 'pages/about';
 @import 'pages/contacts';
