authentication is okay

--- a/frontend/src/sass/components/_alert.scss
+++ b/frontend/src/sass/components/_alert.scss
@@ -1,16 +1,17 @@
-.alert{
+.alert {
     width: 100%;
-    font-size:1.6rem;
-    color : $color-white;
-    margin-top:1rem;
-    height:4rem;
-    padding:1rem 2rem;
+    font-size: 1.6rem;
+    color: $color-white;
+    margin-top: 1rem;
+    height: 4rem;
+    padding: 1rem 2rem;
     margin-bottom: 1rem;
-    
-    &__success{
+
+    &--success {
         background-color: #28a745;
     }
-    &__error{
+
+    &--error {
         background-color: #dc3545;
     }
 }
