--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -7,6 +7,7 @@
 @import 'components/notfound';
 @import 'components/navbar';
 @import 'components/alert';
+@import 'components/auth';
 
 
 @import 'pages/about';
