--- a/frontend/src/sass/components/_navbar.scss
+++ b/frontend/src/sass/components/_navbar.scss
@@ -6,7 +6,7 @@
         justify-content: space-between;
         align-items: center;
         width: 100%;
-        height: 5rem;
+        height: 4.5rem;
         background-color: $color-primary;
 
         &__logo {
@@ -28,8 +28,7 @@
                 text-decoration: none;
 
                 &:first-of-type {
-                    margin-right: 4rem;
-               
+                    margin-right: 8rem;
                 }
             }
         }
@@ -37,10 +36,10 @@
 
     &__bottom {
         display: flex;
-        justify-content:space-evenly;
+        justify-content: space-around;
         align-items: center;
         width: 100%;
-        height: 5rem;
+        height: 5.5rem;
         background-color: $color-tertiary;
 
         &__item {
