--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -8,6 +8,8 @@
 @import 'components/navbar';
 @import 'components/alert';
 @import 'components/auth';
+@import 'components/listingform';
+
 
 
 @import 'pages/about';
